# sparta

./: db.sqlite3  pyproject.toml
.github/workflows/: ci.yml
sparta/: settings.py  urls.py
