[tool.poetry]
name = "sparta"
version = "0.1.0"
description = ""
authors = ["seongolee <seongo0521@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "4.0"
django-ninja = "0.16.1"
black = "21.12b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
